--- a/index.html
+++ b/index.html
@@ -146,6 +146,57 @@
             </div>
         </div>
     </section>
+    <!-- shoes section -->
+    <section class="container my-5">
+        <div class="card-group d-flex ">
+            <div class="card border border-0 me-3 shadow-lg rounded-4 col-md-6 col-sm-12">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="m-4">
+                        <h5 class="card-title">Rebooks men's</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <h3>$1200</h3>
+                    </div>
+                    <div>
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card border border-0 me-3 shadow-lg rounded-4">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div>
+                        <h5 class="card-title">Rebooks men's</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.
+                        </p>
+
+                        <h3>$1200</h3>
+                    </div>
+                    <div>
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card border border-0  shadow-lg rounded-4">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div>
+                        <h5 class="card-title">Rebooks men's</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height
+                            action.</p>
+                        <h3>$1200</h3>
+                    </div>
+                    <div>
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
